--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-router": "0.0.1",
+    "mongodb": "^3.6.10",
     "pg": "^8.6.0",
     "redis": "^3.1.2"
   },
