--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-router": "0.0.1",
     "mongodb": "^3.6.10",
+    "neo4j-driver": "^4.3.2",
     "pg": "^8.6.0",
     "redis": "^3.1.2"
   },
